--- a/css/styles.css
+++ b/css/styles.css
@@ -284,3 +284,12 @@ img {
   border: 1px solid var(--white3);
   border-top: none;
 }
+.svg-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: var(--white2);
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
