--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,10 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
 .footer {
   background-color: var(--dark_grey1);
   padding: 100px 0;
@@ -284,7 +287,7 @@ img {
   border: 1px solid var(--white3);
   border-top: none;
 }
-.svg-container{
+.svg-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -292,4 +295,28 @@ img {
   background-color: var(--white2);
   border-radius: 4px;
   margin-bottom: 8px;
+}
+.list-social-network {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.point-social-network {
+  width: 40px;
+  height: 40px;
+}
+.link-style {
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.link-style:hover {
+  color: var(--blue2);
+}
+.link-style:focus {
+  color: var(--blue2);
 }
