--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,8 @@ img {
   padding: 12px 24px;
   border: 1px solid var(--white3);
   border-radius: 4px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .buttons:hover {
   color: var(--white1);
@@ -195,6 +197,8 @@ img {
   color: var(--white1);
   background-color: var(--blue2);
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .main-header {
   border-bottom: 1px solid #e7e9fc;
@@ -375,7 +379,7 @@ img {
   display: flex;
   gap: 16px;
 }
-.icons-socialmedia{
+.icons-socialmedia {
   fill: var(--white2);
 }
 .other-style:hover {
